<resources>
    <string name="app_name">InstagramClient</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>d
    <string name="action_sign_out">Log out</string>d
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password field can\'t be empty</string>
    <string name="empty_fields">You can\'t have an empty field</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">""Login Success"</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_failed">Sign Up Failed</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="submit">Submit</string>
    <string name="take_photo">Take Photo</string>
    <string name="about_this_photo">About this photo</string>
    <string name="desc_empty">The description can\'t be empty</string>
    <string name="img_empty">There is no image</string>
    <string name="title_activity_feed">ScrollingActivity</string>
    <string name="detail">Detail</string>
    <string name="profile_image">Profile image</string>

</resources>