<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".fragments.ComposeFragment"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="10dp">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/about_this_photo"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/takePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo" />

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>